syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

service InfBlobStorage {
    // Gets a URL to which a file can be uploaded. The request specifies the name of the file.
    // Files are automatically segregated by the user, so the same name can be used for all
    // users. However, if the file already exists for the calling user, uploading another file
    // will replace the existing file.
    rpc GetUploadUrl (GetUploadUrlRequest) returns (GetUploadUrlResponse) {}
}

message GetUploadUrlRequest {
    // The name (and only the name) of the file to be uploaded. If the file already exists, uploading
    // will replace it.
    string fileName = 1;
}

message GetUploadUrlResponse {
    // URL that can be used to upload the file (has a short expiry, so must be used immediately).
    string uploadUrl = 1;

    // URL that points to the uploaded file, and will remain valid indefinitely.
    string publicUrl = 2;
}
